force-app/main/default/objects/vlocity_ins__ProductionCode__c/fields/vlocity_ins__ContractId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the producer contract which grants this code. Multiple codes can be granted by a single contract.</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Production Codes</relationshipLabel>
    <relationshipName>Production_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>