force-app/main/default/objects/vlocity_ins__ProductionCode__c/fields/vlocity_ins__IsWritingCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsWritingCode__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this code can be used for the writing agent (end level credit) or if it is simply used as roll up credit in the hiearchy.</description>
    <label>Writing Code</label>
    <type>Checkbox</type>
</CustomField>