force-app/main/default/objects/vlocity_ins__ProductionCode__c/fields/vlocity_ins__LineofBusiness__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LineofBusiness__c</fullName>
    <description>Line of business approved for this code.</description>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>vlocity_ins__LineofBusiness</valueSetName>
    </valueSet>
</CustomField>