force-app/main/default/objects/vlocity_ins__ProductionCode__c/fields/vlocity_ins__PaymentToPartyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PaymentToPartyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The party that will be paid for producing via this code.</description>
    <label>Payment To</label>
    <referenceTo>vlocity_ins__Party__c</referenceTo>
    <relationshipLabel>Production Codes</relationshipLabel>
    <relationshipName>ProductionCodes</relationshipName>
    <type>Lookup</type>
</CustomField>