force-app/main/default/objects/vlocity_ins__ProductionCode__c/fields/vlocity_ins__ProducerId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProducerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The producer that is granted this code.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Production Codes</relationshipLabel>
    <relationshipName>Production_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>